--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,3 +104,12 @@ border-radius: 8px;
   list-style-type:none;
   padding-left: 0;
 }
+
+.dashboard-events-container form {
+  display: inline-block;
+}
+
+.img-preview {
+  width: 100px;
+  height: 100px;
+}
